<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <!-- Splash Screen -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.lexiread.app.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splash_to_auth"
            app:destination="@id/authFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Auth Screen -->
    <fragment
        android:id="@+id/authFragment"
        android:name="com.lexiread.app.ui.auth.AuthFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_auth">

        <action
            android:id="@+id/action_auth_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Home Screen (Library) -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.lexiread.app.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_reader"
            app:destination="@id/readerFragment" />
    </fragment>

    <!-- Reader Screen -->
    <fragment
        android:id="@+id/readerFragment"
        android:name="com.lexiread.app.ui.reader.ReaderFragment"
        android:label="@string/reader"
        tools:layout="@layout/fragment_reader">

        <argument
            android:name="bookId"
            app:argType="string" />
    </fragment>

    <!-- Annotations Screen -->
    <fragment
        android:id="@+id/annotationsFragment"
        android:name="com.lexiread.app.ui.annotations.AnnotationsFragment"
        android:label="@string/highlights"
        tools:layout="@layout/fragment_annotations" />

    <!-- Settings Screen -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.lexiread.app.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
